src/main/java/com/example/medical/error/NotFoundException.java

package com.example.medical.error;

public class NotFoundException extends RuntimeException {
  public NotFoundException(String message) {
    super(message);
  }
}
